--- a/src/app/features/admin-layout/terminal-management/terminal-management.component.html
+++ b/src/app/features/admin-layout/terminal-management/terminal-management.component.html
@@ -45,26 +45,27 @@
           <!-- Body  -->
           <div class="flex-1 py-2 gap-1 w-full flex flex-col items-start ">
             <div>
-              <span class="font-medium">Last Attendant: </span>
+              <span class="font-medium">{{terminal.status == 'online' ? 'Attendant: ' : 'Last Attendant: '}} </span>
               <span class="opacity-75">{{terminal.attendant ?? 'Not used yet.'}}</span>
             </div>
             <div>
-              <span class="font-medium ">Last Session: </span>
-              <span class="opacity-75">{{terminal.start_time ?? 'No sessions yet.'}}</span>
+              <span class="font-medium ">{{terminal.status == 'online' ? 'Current Session: ' : 'Last Session: '}} </span>
+              <span class="opacity-75">{{terminal.last_active ? (terminal.last_active | date:'MM-dd-yyyy h:mm a' ) : 'No sessions yet.'}}</span>
             </div>
             <div class="flex w-full  mt-2">
               <div class="w-full flex justify-between">
                 <button (click)="selectTerminal(terminal);openDialog('delete')" class="rounded-lg px-2 flex items-center justify-center py-1 text-white bg-red-500 hover:bg-red-600 ">
                   <span  class="material-icons"> delete </span>
                 </button>
-                <button (click)="selectTerminal(terminal);openDialog('maintenance')" class="rounded-lg px-10 py-1 text-white {{terminal.status !='maintenance' ? 'bg-green-500 hover:bg-green-300': 'bg-orange-500 hover:bg-orange-300'}}">
-                  {{terminal.status != 'maintenance'? 'Available':'Maintenance'}}
+                <button (click)="selectTerminal(terminal);openDialog('maintenance')" class="rounded-lg px-6 py-1 text-white flex gap-2 {{statusMap[terminal.status]}}">
+                  <span  class="material-icons hidden 2xl:block"> swap_horiz </span> {{terminal.status == 'online' ? 'Online' : terminal.status != 'maintenance'? 'Available':'Maintenance'}}  
                 </button>
               </div>
             </div>
           </div>
         </button>
         <button 
+        *ngIf="terminals.length <10"
         (click)="addTerminal()"
         class="bg-white tracking-wider h-48 font-thin rounded-lg gap-3 shadow-md  hover:bg-green-950 hover:text-white cursor-pointer flex justify-center border-2 border-solid border-black/10 items-center  " 
         >
@@ -83,7 +84,7 @@
     [type]="'custom'"
     animation="confirmation"
     title="Change Terminal Status"
-    description="Are you sure you want to toggle status of this terminal?"
+    description="Are you sure you want to set status of this terminal to maintenance?"
     (onCancel)="closeDialog()"
     (onConfirm)="toggleMaintenance(selectedTerminal!)"
 ></app-confirmation>
