--- a/src/app/features/desk-attendant-layout/da-terminalmgmt/da-terminalmgmt.component.html
+++ b/src/app/features/desk-attendant-layout/da-terminalmgmt/da-terminalmgmt.component.html
@@ -12,7 +12,7 @@
         <div class=" grid grid-cols-3 px-3 py-3 gap-3"> 
           <button 
           (click)="selectCounter(i)"
-          [disabled]="terminal.status=='maintenance'"
+          [disabled]="terminal.status!='available'"
           *ngFor="let terminal of terminals; let i = index" 
           class="group  {{terminal.status == 'maintenance' ? 'bg-yellow-50 border-yellow-500' :'bg-white hover:bg-green-900 hover:text-white hover:border-green-500 '}} h-48 p-4 rounded-lg flex flex-col gap-2 shadow-md border-2 border-solid border-black/10 ">
             <!-- Header -->
@@ -29,18 +29,18 @@
             <!-- Body  -->
             <div class="flex-1 py-2 gap-1 w-full flex flex-col items-start ">
               <div>
-                <span class="font-medium">Last Attendant: </span>
+                <span class="font-medium">{{terminal.status == 'online' ? 'Attendant: ' : 'Last Attendant: '}} </span>
                 <span class="opacity-75">{{terminal.attendant ?? 'Not used yet.'}}</span>
               </div>
               <div>
-                <span class="font-medium ">Last Session: </span>
-                <span class="opacity-75">{{terminal.start_time ?? 'No sessions yet.'}}</span>
+                <span class="font-medium ">{{terminal.status == 'online' ? 'Current Session: ' : 'Last Session: '}} </span>
+                <span class="opacity-75">{{terminal.last_active ? (terminal.last_active | date:'MM-dd-yyyy h:mm a' ) : 'No sessions yet.'}}</span>
               </div>
               <div class="flex w-full  mt-2">
                 <div class="w-full flex justify-end">
 
-                  <button  class="rounded-lg px-10 py-1 text-white {{terminal.status !='maintenance' ? 'bg-green-500': 'bg-orange-500 '}}">
-                    {{terminal.status != 'maintenance'? 'Available':'Maintenance'}}
+                  <button  class="rounded-lg px-10 py-1 text-white {{statusMap[terminal.status]}}">
+                    {{terminal.status == 'online' ? 'Online': terminal.status != 'maintenance'? 'Available':'Maintenance'}}
                   </button>
                 </div>
               </div>
