--- a/src/app/features/desk-attendant-layout/da-terminalmgmt/da-terminalmgmt.component.html
+++ b/src/app/features/desk-attendant-layout/da-terminalmgmt/da-terminalmgmt.component.html
@@ -56,7 +56,7 @@
   <div *ngIf="selectedCounter" class="w-full mx-auto">
     <div class="bg-white rounded-2xl shadow-2xl overflow-hidden">
       <header class="bg-[#283c1c] text-white p-6 flex justify-between items-center">
-        <h1 class="text-2xl font-bold">Registrar Terminal - Counter {{ selectedCounter }}</h1>
+        <h1 class="text-2xl font-bold">Registrar Terminal - Counter {{ selectedCounter + 1 }}</h1>
         <button mat-icon-button (click)="resetCounter()" class="bg-[#3a5728] p-2 rounded-full hover:bg-[#4a6d32] transition-colors focus:outline-none focus:ring-2 focus:ring-[#a3c089] focus:ring-opacity-50" aria-label="Reset Counter">
           <mat-icon>swap_horiz</mat-icon>
         </button>
