--- a/src/app/features/admin-layout/kiosk-management/modals/create-kiosk/create-kiosk.component.html
+++ b/src/app/features/admin-layout/kiosk-management/modals/create-kiosk/create-kiosk.component.html
@@ -19,10 +19,17 @@
       <form (ngSubmit)="submitForm()" class="space-y-6">
         <!-- Code Field -->   
         <div>
-          <label for="code" class="block mb-1 text-sm font-semibold text-gray-700">Code</label>
-          <input type="text" id="code" [(ngModel)]="kiosk.code" name="code"
+          <label for="code" class="block mb-1 text-sm font-semibold text-gray-700">
+            <span>Code </span>
+             <!-- Error -->
+            <span  class="animate-pop font-medium text-red-500">* </span>
+            <span *ngIf="errorMessage" class="animate-pop font-medium text-red-500">{{errorMessage}} </span>
+          </label>
+          <input type="text" id="code" [(ngModel)]="kiosk.code" name="code" required
                  class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600 transition"/>
         </div>
+       
+      
         <!-- Submit & Cancel Buttons -->
         <div class="flex justify-center space-x-4">
           <button type="button" (click)="close()" class="px-5 py-2 bg-gray-100 text-gray-700 font-medium rounded-lg hover:bg-gray-200 transition">
