--- a/src/app/features/admin-layout/kiosk-management/kiosk-management.component.html
+++ b/src/app/features/admin-layout/kiosk-management/kiosk-management.component.html
@@ -88,7 +88,7 @@
 <app-confirmation
     *ngIf="modalType== 'maintenance'"
     [type]="'custom'"
-    animation="confirmation"
+    animation="yellowWarning"
     title="Change Kiosk Status"
     description="Are you sure you want to toggle status of this kiosk?"
     (onCancel)="closeDialog(false)"
