--- a/src/app/features/admin-layout/terminal-management/terminal-management.component.html
+++ b/src/app/features/admin-layout/terminal-management/terminal-management.component.html
@@ -82,7 +82,7 @@
 <app-confirmation
     *ngIf="modalType== 'maintenance'"
     [type]="'custom'"
-    animation="confirmation"
+    animation="yellowWarning"
     title="Change Terminal Status"
     description="Are you sure you want to set status of this terminal to maintenance?"
     (onCancel)="closeDialog()"
