--- a/src/app/shared/modals/confirmation/confirmation.component.html
+++ b/src/app/shared/modals/confirmation/confirmation.component.html
@@ -32,4 +32,5 @@
             <button class="text-white px-4 py-1 rounded-md bg-green-600 cursor-pointer hover:bg-green-500" (click)="confirm()">{{ confirmText[type]}}</button>
         </div>
     </div>
+    <audio [volume]="0.4"  [src]="'assets/audio/pop-notif.wav'" autoplay></audio>
 </div>
