--- a/src/app/shared/snackbar/snackbar.component.html
+++ b/src/app/shared/snackbar/snackbar.component.html
@@ -14,6 +14,6 @@
                 <span  class="material-icons text-lg leading-none"> close </span>
             </div>
         </div>
-        <audio [volume]="0.4" id="{{feedback.id}}" [src]="feedback.type =='error' ? 'assets/audio/pop-notif.wav': 'assets/audio/notif.mp3'" autoplay></audio>
+        <audio [volume]="0.4" id="{{feedback.id}}" [src]="feedback.type !='success' ? 'assets/audio/pop-notif.wav': 'assets/audio/notif.mp3'" autoplay preload="auto"></audio>
     </ng-container>
 </div>
