--- a/src/app/features/admin-layout/dashboard/dashboard.component.html
+++ b/src/app/features/admin-layout/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
-<section class="w-full min-h-screen p-8">
-  <div class="w-full max-w-7xl mx-auto">
+<section class="w-full ">
+  <div class="w-full mx-auto">
     <!-- Overall Metrics Overview and Queue Status -->
     <section class="grid grid-cols-1 lg:grid-cols-3 gap-6 mb-12">
       <!-- Metrics -->
