--- a/src/app/features/desk-attendant-layout/da-terminalmgmt/da-terminalmgmt.component.html
+++ b/src/app/features/desk-attendant-layout/da-terminalmgmt/da-terminalmgmt.component.html
@@ -10,7 +10,7 @@
       <main class="p-8">
         <div class=" grid grid-cols-3 px-3 py-3 gap-3"> 
           <button 
-          (click)="selectCounter(i)"
+          (click)="selectCounter(terminal)"
           *ngFor="let terminal of terminals; let i = index" 
           class="group  {{terminal.status == 'maintenance' ? 'bg-yellow-50 border-yellow-500' :'bg-white hover:bg-green-900 hover:text-white hover:border-green-500 '}} h-48 p-4 rounded-lg flex flex-col gap-2 shadow-md border-2 border-solid border-black/10 ">
             <!-- Header -->
@@ -54,7 +54,7 @@
   <div *ngIf="selectedCounter" class="w-full mx-auto">
     <div class="bg-white rounded-2xl shadow-2xl overflow-hidden">
       <header class="bg-[#283c1c] text-white p-6 flex justify-between items-center">
-        <h1 class="text-2xl font-bold">{{division?.name?.replaceAll('Division','')?.trim()}} Terminal - Counter {{ selectedCounter + 1 }}</h1>
+        <h1 class="text-2xl font-bold">{{division?.name?.replaceAll('Division','')?.trim()}} Terminal - Counter {{ selectedCounter.number}}</h1>
         <button mat-icon-button (click)="openTerminateModal()" class="bg-[#3a5728] p-2 rounded-full hover:bg-[#4a6d32] transition-colors focus:outline-none focus:ring-2 focus:ring-[#a3c089] focus:ring-opacity-50" aria-label="Reset Counter">
           <mat-icon>power_settings_new</mat-icon>
         </button>
