--- a/src/app/features/admin-layout/terminal-management/terminal-management.component.html
+++ b/src/app/features/admin-layout/terminal-management/terminal-management.component.html
@@ -54,9 +54,10 @@
             </div>
             <div class="flex w-full  mt-2">
               <div class="w-full flex justify-between">
-                <button (click)="selectTerminal(terminal);openDialog('delete')" class="rounded-lg px-2 flex items-center justify-center py-1 text-white bg-red-500 hover:bg-red-600 ">
+                <button *ngIf="terminal.status != 'online'" (click)="selectTerminal(terminal);openDialog('delete')" class="rounded-lg px-2 flex items-center justify-center py-1 text-white bg-red-500 hover:bg-red-600 ">
                   <span  class="material-icons"> delete </span>
                 </button>
+                <div *ngIf="terminal.status == 'online'"></div>
                 <button (click)="selectTerminal(terminal);openDialog('maintenance')" class="rounded-lg px-6 py-1 text-white flex gap-2 {{statusMap[terminal.status]}}">
                   <span  class="material-icons hidden 2xl:block"> swap_horiz </span> {{terminal.status == 'online' ? 'Online' : terminal.status != 'maintenance'? 'Available':'Maintenance'}}  
                 </button>
